--- a/src/slide-show/slide-show.scss
+++ b/src/slide-show/slide-show.scss
@@ -3,7 +3,7 @@
  * Slide Show (SCSS)
  *
  * @author Takuto Yanagida @ Space-Time Inc.
- * @version 2018-10-27
+ * @version 2018-11-07
  *
  */
 
@@ -204,7 +204,7 @@ $slide-show-rivet-overlap       : 0 !default;
 
 	@include for-tablet-landscape-up {
 		background-color: transparent;
-		height: 50%;
+		min-height: 50%;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
