--- a/src/slide-show/slide-show.scss
+++ b/src/slide-show/slide-show.scss
@@ -3,7 +3,7 @@
  * Slide Show (SCSS)
  *
  * @author Takuto Yanagida @ Space-Time Inc.
- * @version 2018-11-07
+ * @version 2018-11-09
  *
  */
 
@@ -16,34 +16,34 @@
 $slide-show-size-width     : 72rem !default;
 $slide-show-size-height-min: 14rem !default;
 $slide-show-size-height-max: 80vh !default;
-$slide-show-color-strip    : lightgray !default;
+$slide-show-color-strip    : #777 !default;
 
 $slide-show-slide-ratio        : 5 / 12 !default;
 $slide-show-slide-size         : cover !default;
-$slide-show-slide-shadow       : 32px 0 64px -32px rgba(0, 0, 0, 0.25), -32px 0 64px -32px rgba(0, 0, 0, 0.25) !default;
+$slide-show-slide-shadow       : 32px 0 64px -32px rgba(#000, 0.25), -32px 0 64px -32px rgba(#000, 0.25) !default;
 $slide-show-slide-color-outside: rgba(0, 0, 0, 0.4) !default;
 $slide-show-slide-color-dual   : rgba(0, 0, 0, 0.4) !default;
 
-$slide-show-caption-color           : white !default;
-$slide-show-caption-color-shadow    : black !default;
-$slide-show-caption-color-bg        : rgba(0, 0, 0, 0.4) !default;
+$slide-show-caption-color           : #fff !default;
+$slide-show-caption-color-shadow    : #000 !default;
+$slide-show-caption-color-bg        : rgba(#000, 0.40) !default;
 $slide-show-caption-size-font-circle: 2rem !default;
 $slide-show-caption-size-font-line  : 1.9rem !default;
 $slidw-show-caption-line-type       : 'first-bold' !default;  // 'first-bold', 'not-last-bold', 'normal'
 
 $slide-show-btn-size-stroke     : 2px !default;
 $slide-show-btn-size-radius     : 50% !default;
-$slide-show-btn-color           : rgba(0, 0, 0, 0.4) !default;
-$slide-show-btn-color-mark      : white !default;
-$slide-show-btn-color-mark-hover: white !default;
+$slide-show-btn-color           : rgba(#000, 0.40) !default;
+$slide-show-btn-color-mark      : #fff !default;
+$slide-show-btn-color-mark-hover: #fff !default;
 
 $slide-show-rivet-size-width    : 0.85rem !default;
 $slide-show-rivet-size-height   : 0.85rem !default;
 $slide-show-rivet-size-radius   : 50% !default;
 $slide-show-rivet-size-padding  : 0.5rem 1rem !default;
-$slide-show-rivet-color         : gray !default;
-$slide-show-rivet-color-selected: turquoise !default;
-$slide-show-rivet-shadow        : 0 0 0.5rem rgba(0, 0, 0, 0.35) !default;
+$slide-show-rivet-color         : #eee !default;
+$slide-show-rivet-color-selected: #777 !default;
+$slide-show-rivet-shadow        : 0 0 0.5rem rgba(#000, 0.35) !default;
 $slide-show-rivet-overlap       : 0 !default;
 
 
