Change the default style of rivets

--- a/src/slide-show/slide-show.scss
+++ b/src/slide-show/slide-show.scss
@@ -38,12 +38,12 @@ $slide-show-btn-color           : rgba(#000, 0.40) !default;
 $slide-show-btn-color-mark      : #fff !default;
 $slide-show-btn-color-mark-hover: #fff !default;
 
-$slide-show-rivet-size-width    : 0.85rem !default;
-$slide-show-rivet-size-height   : 0.85rem !default;
+$slide-show-rivet-size-width    : 0.65rem !default;
+$slide-show-rivet-size-height   : 0.65rem !default;
 $slide-show-rivet-size-radius   : 50% !default;
-$slide-show-rivet-size-padding  : 0.5rem 1rem !default;
-$slide-show-rivet-color         : #eee !default;
-$slide-show-rivet-color-selected: #777 !default;
+$slide-show-rivet-size-padding  : 0.35rem 1rem !default;
+$slide-show-rivet-color         : rgba(#eee, 0.9) !default;
+$slide-show-rivet-color-selected: rgba(#777, 0.9) !default;
 $slide-show-rivet-shadow        : 0 0 0.5rem rgba(#000, 0.35) !default;
 $slide-show-rivet-overlap       : 0 !default;
 
