--- a/docs/style.scss
+++ b/docs/style.scss
@@ -3,7 +3,7 @@
  * Stomp Sample (SCSS)
  *
  * @author Takuto Yanagida @ Space-Time Inc.
- * @version 2018-10-27
+ * @version 2019-04-01
  *
  */
 
@@ -30,7 +30,9 @@ body {
 
 	padding-top: 6rem;
 	padding-bottom: 6rem;
+
 	overflow-x: hidden;
+	position: relative;
 }
 
 .stile {
