--- a/src/slide-show/slide-show.scss
+++ b/src/slide-show/slide-show.scss
@@ -29,6 +29,7 @@ $slide-show-caption-size-font-circle: 2rem !default;
 $slide-show-caption-size-font-line  : 1.9rem !default;
 $slidw-show-caption-line-type       : 'first-bold' !default;  // 'first-bold', 'not-last-bold', 'normal'
 
+$slide-show-btn-size            : 3rem !default;
 $slide-show-btn-size-stroke     : 2px !default;
 $slide-show-btn-size-radius     : 50% !default;
 $slide-show-btn-color           : rgba(#000, 0.40) !default;
@@ -48,64 +49,40 @@ $slide-show-rivet-overlap       : 0 !default;
 // -----------------------------------------------------------------------------
 
 
-@mixin fill-full-width-strip($color) {
-	background-color: $color;
-	box-shadow: -33vw 0 0 $color, 33vw 0 0 $color;
-
-	// for avoiding that lines are shown at the edge of box element on IE 11
-	@include for-ie {
-		position: relative;
-		&::after {
-			content: '';
-			position: absolute;
-			left: -100vw;
-			width: 200vw;
-			top: 0;
-			bottom: 0;
-			background-color: $color;
-			z-index: -1;
-		}
-	}
-}
-
-@mixin shape-angle($color, $dir, $size, $width) {
-	$r2: 1 / 1.4142125;
-	width: $size * $r2;
-	height: $size * $r2;
-
-	border-top: $width solid $color;
-	border-left: $width solid $color;
-
-	transform-origin: #{$size * $r2 / 2} #{$size * $r2/ 2};
-	@if      $dir == top    { transform: rotate(45deg);   }
-	@else if $dir == left   { transform: rotate(-45deg);  }
-	@else if $dir == right  { transform: rotate(135deg);  }
-	@else if $dir == bottom { transform: rotate(-135deg); }
-}
-
-@mixin shape-angle-color($color) {
-	border-top-color: $color;
-	border-left-color: $color;
-}
-
-
-// -----------------------------------------------------------------------------
-
-
 .st-slide-show-slides,
 .st-slide-show-picture {
 	@include layout-fill-self;
 }
 
 .st-slide-show {
-	position: relative;
-	display: flex;
+	position      : relative;
+	display       : flex;
 	flex-direction: column;
 }
 
 .st-slide-show-strip {
 	@include layout-side-margin($slide-show-size-width);
-	@include fill-full-width-strip($slide-show-color-strip);
+
+	background-color: $slide-show-color-strip;
+	box-shadow:
+		-33vw 0 0 $slide-show-color-strip,
+		 33vw 0 0 $slide-show-color-strip;
+
+	// for avoiding that lines are shown at the edge of box element on IE 11
+	@include for-ie {
+		position: relative;
+		&::after {
+			content : '';
+			position: absolute;
+			top     : 0;
+			left    : -100vw;
+			bottom  : 0;
+			width   : 200vw;
+			z-index : -1;
+
+			background-color: $slide-show-color-strip;
+		}
+	}
 
 	min-height: $slide-show-size-height-min;
 	max-height: $slide-show-size-height-max;
@@ -122,51 +99,53 @@ $slide-show-rivet-overlap       : 0 !default;
 
 .st-slide-show-background-frame {
 	position: absolute;
-	top: 0;
-	bottom: 0;
-	width: 100vw;
+	top     : 0;
+	bottom  : 0;
+	width   : 100vw;
 	overflow: hidden;
 
 	> div {
 		@include layout-fill-self;
 
-		opacity: 0;
-		transform: scale(2, 2);
+		opacity         : 0;
+		transform       : scale(2, 2);
 		transform-origin: center center;
 
-		background-repeat: no-repeat;
-		background-size: cover;
+		background-size    : cover;
 		background-position: center;
+		background-repeat  : no-repeat;
+
+		filter: blur(5px);
 	}
 }
 
 .st-slide-show-slides {
-	margin: 0;
+	margin : 0;
 	padding: 0;
 
-	width: 100%;
+	width : 100%;
 	height: 100%;
 
 	list-style: none;
-	overflow: hidden;
+	overflow  : hidden;
 
 	box-shadow: $slide-show-slide-shadow;
 
 	> li {
 		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
+		top     : 0;
+		width   : 100%;
+		height  : 100%;
 
-		overflow: hidden;
+		overflow           : hidden;
 		backface-visibility: hidden;
 
 		background-color: $slide-show-slide-color-outside;
 
 		> a {
 			display: block;
-			width: 100%;
-			height: 100%;
+			width  : 100%;
+			height : 100%;
 		}
 	}
 }
@@ -177,10 +156,10 @@ $slide-show-rivet-overlap       : 0 !default;
 
 .st-slide-show-picture,
 .st-slide-show-picture > div {
-	background-size: $slide-show-slide-size;
-	background-repeat: no-repeat;
+	background-size    : $slide-show-slide-size;
+	background-repeat  : no-repeat;
 	background-position: center center;
-	transition: transform 10s;
+	transition         : transform 10s;
 }
 
 .st-slide-show-picture:not(.dual) > div {
@@ -196,7 +175,7 @@ $slide-show-rivet-overlap       : 0 !default;
 		}
 	}
 	&.do > div:first-child {
-		transition: transform 10s, background-position 10s;
+		transition         : transform 10s, background-position 10s;
 		background-position: center bottom;
 	}
 }
@@ -206,15 +185,15 @@ $slide-show-rivet-overlap       : 0 !default;
 
 
 .st-slide-show-picture.dual {
-	display: flex;
+	display         : flex;
 	background-color: $slide-show-slide-color-dual;
 
 	> div {
-		width: 50%;
+		width : 50%;
 		height: 100%;
 
 		&:last-child {
-			opacity: 0;
+			opacity   : 0;
 			transition: opacity 1s;
 		}
 	}
@@ -226,7 +205,7 @@ $slide-show-rivet-overlap       : 0 !default;
 			background-position: center bottom;
 		}
 		&.do > div:last-child {
-			transition: opacity 1s, transform 9s 1s, background-position 9s 1s;
+			transition         : opacity 1s, transform 9s 1s, background-position 9s 1s;
 			background-position: center top;
 		}
 	}
@@ -238,11 +217,11 @@ $slide-show-rivet-overlap       : 0 !default;
 
 .st-slide-show-video {
 	position: relative;
-	height: 100%;
+	height  : 100%;
 
 	video {
-		position: absolute;
-		top: 50%;
+		position : absolute;
+		top      : 50%;
 		transform: translate(0, -50%);
 	}
 }
@@ -252,17 +231,17 @@ $slide-show-rivet-overlap       : 0 !default;
 
 
 .st-slide-show-caption {
-	opacity: 0;
-	z-index: 2;
+	opacity       : 0;
+	z-index       : 2;
 	pointer-events: none;
 
-	color: $slide-show-caption-color;
+	color      : $slide-show-caption-color;
 	text-shadow: 0 0 0.5rem $slide-show-caption-color-shadow;
 	line-height: 1.25;
 	@include font-proportional;
 
 	&.visible {
-		opacity: 1;
+		opacity            : 1;
 		transition-property: opacity;
 	}
 
@@ -271,11 +250,11 @@ $slide-show-rivet-overlap       : 0 !default;
 
 @mixin subtitle {
 	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	left    : 0;
+	right   : 0;
+	bottom  : 0;
 
-	padding: 0.75rem 1rem;
+	padding         : 0.75rem 1rem;
 	background-color: $slide-show-caption-color-bg;
 }
 
@@ -288,21 +267,21 @@ $slide-show-rivet-overlap       : 0 !default;
 
 	@include for-tablet-landscape-up {
 		background-color: transparent;
-		min-height: 50%;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: flex-start;
+		min-height      : 50%;
+		display         : flex;
+		flex-direction  : column;
+		justify-content : center;
+		align-items     : flex-start;
 
 		> div {
 			max-width: 100%;  // for IE
 		}
 		> div > span {
-			display: inline;
-			max-width: 100%;  // for IE
+			display         : inline;
+			max-width       : 100%;  // for IE
 			background-color: $slide-show-caption-color-bg;
-			font-size: $slide-show-caption-size-font-line;
-			line-height: 1.5;
+			font-size       : $slide-show-caption-size-font-line;
+			line-height     : 1.5;
 		}
 		@if $slidw-show-caption-line-type == 'first-bold' {
 			div:first-child { @include font-bold; }
@@ -314,16 +293,23 @@ $slide-show-rivet-overlap       : 0 !default;
 	}
 }
 
-.st-slide-show-caption.circle {
-	@include layout-fill-self;
+.st-slide-show-slides .st-slide-show-caption.circle {  // for CSS Specificity
+	position: absolute;
+	top     : 0;
+	left    : $slide-show-btn-size;
+	right   : $slide-show-btn-size;
+	bottom  : 0;
+
 	@include layout-centering;
-	flex-direction: column;
-
+	flex-direction  : column;
 	background-image: radial-gradient(circle closest-side at center center, $slide-show-caption-color-bg 50%, transparent 51%);
-	line-height: 1.5;
-	font-size: $slide-show-caption-size-font-circle;
-	text-align: center;
 
+	&,
+	& > div {
+		line-height: 1.25;
+		font-size  : $slide-show-caption-size-font-circle;
+		text-align : center;
+	}
 	> div + div { margin-top: 0.5rem; }
 }
 
@@ -331,27 +317,29 @@ $slide-show-rivet-overlap       : 0 !default;
 // -----------------------------------------------------------------------------
 
 
-.st-slide-show-prev, .st-slide-show-next {
+.st-slide-show-prev,
+.st-slide-show-next {
 	user-select: none;
-	cursor: pointer;
+	cursor     : pointer;
 
 	position: absolute;
-	top: 0;
-	bottom: 0;
-	width: 4rem;
+	top     : 0;
+	bottom  : 0;
+	width   : 3rem;
 
 	@include layout-centering;
 
 	&:before {
-		content: '';
-		width: 4rem;
-		height: 4rem;
-		border-radius: $slide-show-btn-size-radius;
+		content : '';
 		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-2rem, -2rem);
-		transition: all 0.2s;
+		top     : 50%;
+		left    : 50%;
+		width   : $slide-show-btn-size;
+		height  : $slide-show-btn-size;
+
+		transform    : translate($slide-show-btn-size / -2, $slide-show-btn-size / -2);
+		border-radius: $slide-show-btn-size-radius;
+		transition   : all 0.2s;
 	}
 	&:hover:before {
 		background-color: $slide-show-btn-color;
@@ -359,23 +347,33 @@ $slide-show-rivet-overlap       : 0 !default;
 	&::after {
 		content: '';
 		transition: all 0.2s;
+
+		width : 1.4rem;
+		height: 1.4rem;
+
+		border-top : $slide-show-btn-size-stroke solid $slide-show-btn-color-mark;
+		border-left: $slide-show-btn-size-stroke solid $slide-show-btn-color-mark;
+
+		transform-origin: #{1.4rem / 2} #{1.4rem / 2};
+	}
+	&:hover::after {
+		border-top-color : $slide-show-btn-color-mark-hover;
+		border-left-color: $slide-show-btn-color-mark-hover;
 	}
 }
 .st-slide-show-next {
 	right: 0;
-
 	&::after {
-		@include shape-angle($slide-show-btn-color-mark, right, 2rem, $slide-show-btn-size-stroke);
 		margin-left: -0.75rem;
+		transform  : rotate(135deg);
 	}
-	&:hover::after { @include shape-angle-color($slide-show-btn-color-mark-hover); }
 }
 .st-slide-show-prev {
+	left: 0;
 	&::after {
-		@include shape-angle($slide-show-btn-color-mark, left, 2rem, $slide-show-btn-size-stroke);
 		margin-left: 0.75rem;
+		transform  : rotate(-45deg);
 	}
-	&:hover::after { @include shape-angle-color($slide-show-btn-color-mark-hover); }
 }
 
 
@@ -383,28 +381,29 @@ $slide-show-rivet-overlap       : 0 !default;
 
 
 .st-slide-show-rivets {
-	position: absolute;
-	bottom: $slide-show-rivet-overlap;
-	left: 50%;
+	position : absolute;
+	left     : 50%;
+	bottom   : $slide-show-rivet-overlap;
+	width    : 100%;
+	z-index  : 1;
 	transform: translateX(-50%);
-	width: 100%;
-	z-index: 1;
 
 	text-align: center;
 
 	> input[type=radio] + label {
 		display: inline-block;
 		padding: $slide-show-rivet-size-padding;
-		cursor: pointer;
+		cursor : pointer;
 
 		&::after {
 			content: '';
 			display: block;
-			width: $slide-show-rivet-size-width;
-			height: $slide-show-rivet-size-height;
-			border-radius: $slide-show-rivet-size-radius;
+			width  : $slide-show-rivet-size-width;
+			height : $slide-show-rivet-size-height;
+
+			border-radius   : $slide-show-rivet-size-radius;
 			background-color: $slide-show-rivet-color;
-			box-shadow: $slide-show-rivet-shadow;
+			box-shadow      : $slide-show-rivet-shadow;
 		}
 	}
 	> input[type=radio]:checked + label {
