--- a/src/slide-show/slide-show.scss
+++ b/src/slide-show/slide-show.scss
@@ -3,7 +3,7 @@
  * Slide Show (SCSS)
  *
  * @author Takuto Yanagida @ Space-Time Inc.
- * @version 2019-07-19
+ * @version 2019-07-20
  *
  */
 
@@ -30,7 +30,7 @@ $slide-show-caption-size-font-circle-phone: 1.50rem !default;
 $slide-show-caption-size-font-line        : 1.85rem !default;
 $slidw-show-caption-line-type             : 'first-bold' !default;  // 'first-bold', 'not-last-bold', 'normal'
 
-$slide-show-btn-size            : 3rem !default;
+$slide-show-btn-size            : 2rem !default;
 $slide-show-btn-size-stroke     : 2px !default;
 $slide-show-btn-size-radius     : 50% !default;
 $slide-show-btn-color           : rgba(#000, 0.40) !default;
@@ -51,377 +51,406 @@ $slide-show-rivet-top-phone     : true !default;
 // -----------------------------------------------------------------------------
 
 
-.st-slide-show-slides,
-.st-slide-show-picture {
-	@include layout-fill-self;
-}
-
 .st-slide-show {
 	position      : relative;
 	display       : flex;
 	flex-direction: column;
-	overflow-x    : hidden;
 }
 
-.st-slide-show-strip {
-	@include layout-side-margin($slide-show-size-width);
+.st-slide-show {  // for CSS Specificity
 
-	background-color: $slide-show-color-strip;
-	box-shadow:
-		-33vw 0 0 $slide-show-color-strip,
-		 33vw 0 0 $slide-show-color-strip;
-
-	// for avoiding that lines are shown at the edge of box element on IE 11
-	@include for-ie {
-		position: relative;
-		&::after {
-			content : '';
-			position: absolute;
-			top     : 0;
-			left    : -100vw;
-			bottom  : 0;
-			width   : 200vw;
-			z-index : -1;
-
-			background-color: $slide-show-color-strip;
-		}
-	}
-
-	min-height: $slide-show-size-height-min;
-	max-height: $slide-show-size-height-max;
-
-	position: relative;
-	@if ($slide-show-slide-ratio != false) {
-		&:before {
-			content: '';
-			display: block;
-			padding-top: ($slide-show-slide-ratio * 100%);
-		}
-	}
-}
-
-.st-slide-show-background-frame {
-	position: absolute;
-	top     : 0;
-	bottom  : 0;
-	width   : 100vw;
-	overflow: hidden;
-
-	> div {
+	.st-slide-show-slides,
+	.st-slide-show-picture {
 		@include layout-fill-self;
-
-		opacity         : 0;
-		transform       : scale(2, 2);
-		transform-origin: center center;
-
-		background-size    : cover;
-		background-position: center;
-		background-repeat  : no-repeat;
-
-		filter: blur(5px);
 	}
-}
 
-.st-slide-show .st-slide-show-slides {  // for Selector Specificity
-	margin : 0;
-	padding: 0;
+	.st-slide-show-frame {
+		overflow-x: hidden;
+	}
 
-	width : 100%;
-	height: 100%;
+	.st-slide-show-strip {
+		@include layout-side-margin($slide-show-size-width);
 
-	list-style: none;
-	overflow  : hidden;
+		background-color: $slide-show-color-strip;
+		box-shadow:
+			-33vw 0 0 $slide-show-color-strip,
+			 33vw 0 0 $slide-show-color-strip;
 
-	box-shadow: $slide-show-slide-shadow;
+		// for avoiding that lines are shown at the edge of box element on IE 11
+		@include for-ie {
+			position: relative;
+			&::after {
+				content : '';
+				position: absolute;
+				top     : 0;
+				left    : -100vw;
+				bottom  : 0;
+				width   : 200vw;
+				z-index : -1;
 
-	> li {
+				background-color: $slide-show-color-strip;
+			}
+		}
+
+		min-height: $slide-show-size-height-min;
+		max-height: $slide-show-size-height-max;
+
+		position: relative;
+		@if ($slide-show-slide-ratio != false) {
+			&::before {
+				content: '';
+				display: block;
+				padding-top: ($slide-show-slide-ratio * 100%);
+			}
+		}
+	}
+
+	.st-slide-show-background-frame {
 		position: absolute;
 		top     : 0;
-		width   : 100%;
-		height  : 100%;
-
-		overflow           : hidden;
-		backface-visibility: hidden;
-
-		background-color: $slide-show-slide-color-outside;
-
-		> a {
-			display: block;
-			width  : 100%;
-			height : 100%;
-		}
-	}
-}
-
-
-// -----------------------------------------------------------------------------
-
-
-.st-slide-show-picture,
-.st-slide-show-picture > div {
-	background-size    : $slide-show-slide-size;
-	background-repeat  : no-repeat;
-	background-position: center center;
-	transition         : transform 10s;
-}
-
-.st-slide-show-picture:not(.dual) > div {
-	@include layout-fill-self;
-}
-
-.st-slide-show-picture.scroll {
-	> div {
-		background-size: 100% auto;
-
-		&:first-child {
-			background-position: center top;
-		}
-	}
-	&.do > div:first-child {
-		transition         : transform 10s, background-position 10s;
-		background-position: center bottom;
-	}
-}
-
-
-// -----------------------------------------------------------------------------
-
-
-.st-slide-show-picture.dual {
-	display         : flex;
-	background-color: $slide-show-slide-color-dual;
-
-	> div {
-		width : 50%;
-		height: 100%;
-
-		&:last-child {
-			opacity   : 0;
-			transition: opacity 1s;
-		}
-	}
-	&.do > div:last-child {
-		opacity: 1;
-	}
-	&.scroll {
-		> div:last-child {
-			background-position: center bottom;
-		}
-		&.do > div:last-child {
-			transition         : opacity 1s, transform 9s 1s, background-position 9s 1s;
-			background-position: center top;
-		}
-	}
-}
-
-
-// -----------------------------------------------------------------------------
-
-
-.st-slide-show-video {
-	position: relative;
-	height  : 100%;
-
-	video {
-		position : absolute;
-		top      : 50%;
-		transform: translate(0, -50%);
-	}
-}
-
-
-// -----------------------------------------------------------------------------
-
-
-.st-slide-show-caption {
-	opacity       : 0;
-	z-index       : 1;
-	pointer-events: none;
-
-	color      : $slide-show-caption-color;
-	text-shadow: 0 0 0.5rem $slide-show-caption-color-shadow;
-	line-height: 1.25;
-	@include font-proportional;
-
-	&.visible {
-		opacity            : 1;
-		transition-property: opacity;
-	}
-
-	span > span { display: inline-block; }
-}
-
-.st-slide-show-caption.subtitle,
-.st-slide-show-caption.line {
-	position: absolute;
-	left    : 0;
-	right   : 0;
-	bottom  : 0;
-
-	background-color: $slide-show-caption-color-bg;
-
-	padding: 0.5rem 1rem;
-	@include for-tablet-up { padding: 0.85rem 1rem; }
-}
-
-.st-slide-show-caption.line {
-	@include for-tablet-landscape-up {
-		display        : flex;
-		flex-direction : column;
-		align-items    : flex-start;
-		justify-content: center;
-		min-height     : 50%;
-
-		background-color: transparent;
+		bottom  : 0;
+		width   : 100vw;
+		overflow: hidden;
 
 		> div {
-			max-width: 100%;  // for IE
-		}
-		> div > span {
-			display  : inline;
-			max-width: 100%;  // for IE
+			@include layout-fill-self;
 
-			background-color: $slide-show-caption-color-bg;
-			font-size       : $slide-show-caption-size-font-line;
-			line-height     : 1.5;
+			opacity         : 0;
+			transform       : scale(2, 2);
+			transform-origin: center center;
+
+			background-size    : cover;
+			background-position: center;
+			background-repeat  : no-repeat;
+
+			filter: blur(5px);
 		}
-		@if $slidw-show-caption-line-type == 'first-bold' {
-			div:first-child { @include font-bold; }
-		} @else if $slidw-show-caption-line-type == 'not-last-bold' {
-			div { @include font-bold; }
-			div:last-child { @include font-bold-cancel; }
-		}
-		div:not(:first-child) { margin-top: 1rem; }
 	}
-}
 
-.st-slide-show-slides .st-slide-show-caption.circle {  // for CSS Specificity
-	position: absolute;
-	top     : 0;
-	left    : $slide-show-btn-size;
-	right   : $slide-show-btn-size;
-	bottom  : 0;
+	.st-slide-show-slides {
+		margin : 0;
+		padding: 0;
 
-	@include layout-centering;
-	flex-direction  : column;
-	background-image: radial-gradient(circle closest-side at center center, $slide-show-caption-color-bg 50%, transparent 51%);
+		width : 100%;
+		height: 100%;
 
-	&,
-	& > div {
-		text-align : center;
+		list-style: none;
+		overflow  : hidden;
+
+		box-shadow: $slide-show-slide-shadow;
+
+		> li {
+			position: absolute;
+			top     : 0;
+			width   : 100%;
+			height  : 100%;
+
+			overflow           : hidden;
+			backface-visibility: hidden;
+
+			background-color: $slide-show-slide-color-outside;
+
+			> a {
+				display: block;
+				width  : 100%;
+				height : 100%;
+			}
+		}
+	}
+
+}  // .st-slide-show
+
+
+// -----------------------------------------------------------------------------
+
+
+.st-slide-show {  // for CSS Specificity
+
+	.st-slide-show-picture,
+	.st-slide-show-picture > div {
+		background-size    : $slide-show-slide-size;
+		background-repeat  : no-repeat;
+		background-position: center center;
+		transition         : transform 10s;
+	}
+
+	.st-slide-show-picture:not(.dual) > div {
+		@include layout-fill-self;
+	}
+
+	.st-slide-show-picture.scroll {
+		> div {
+			background-size: 100% auto;
+
+			&:first-child {
+				background-position: center top;
+			}
+		}
+		&.do > div:first-child {
+			transition         : transform 10s, background-position 10s;
+			background-position: center bottom;
+		}
+	}
+
+}  // .st-slide-show
+
+
+// -----------------------------------------------------------------------------
+
+
+.st-slide-show {  // for CSS Specificity
+
+	.st-slide-show-picture.dual {
+		display         : flex;
+		background-color: $slide-show-slide-color-dual;
+
+		> div {
+			width : 50%;
+			height: 100%;
+
+			&:last-child {
+				opacity   : 0;
+				transition: opacity 1s;
+			}
+		}
+		&.do > div:last-child {
+			opacity: 1;
+		}
+		&.scroll {
+			> div:last-child {
+				background-position: center bottom;
+			}
+			&.do > div:last-child {
+				transition         : opacity 1s, transform 9s 1s, background-position 9s 1s;
+				background-position: center top;
+			}
+		}
+	}
+
+}  // .st-slide-show
+
+
+// -----------------------------------------------------------------------------
+
+
+.st-slide-show {  // for CSS Specificity
+
+	.st-slide-show-video {
+		position: relative;
+		height  : 100%;
+
+		video {
+			position : absolute;
+			top      : 50%;
+			transform: translate(0, -50%);
+		}
+	}
+
+}  // .st-slide-show
+
+
+// -----------------------------------------------------------------------------
+
+
+.st-slide-show {  // for CSS Specificity
+
+	.st-slide-show-caption {
+		opacity       : 0;
+		z-index       : 1;
+		pointer-events: none;
+
+		color      : $slide-show-caption-color;
+		text-shadow: 0 0 0.5rem $slide-show-caption-color-shadow;
 		line-height: 1.25;
+		@include font-proportional;
 
-		font-size: $slide-show-caption-size-font-circle-phone;
-		@include for-tablet-up {
-			font-size: $slide-show-caption-size-font-circle;
+		&.visible {
+			opacity            : 1;
+			transition-property: opacity;
 		}
+		span > span { display: inline-block; }
 	}
-	> div + div { margin-top: 0.5rem; }
-}
 
-
-// -----------------------------------------------------------------------------
-
-
-.st-slide-show-prev,
-.st-slide-show-next {
-	user-select: none;
-	cursor     : pointer;
-
-	position: absolute;
-	top     : 0;
-	bottom  : 0;
-	width   : 3rem;
-
-	@include layout-centering;
-
-	&:before {
-		content : '';
+	.st-slide-show-caption.subtitle,
+	.st-slide-show-caption.line {
 		position: absolute;
-		top     : 50%;
-		left    : 50%;
-		width   : $slide-show-btn-size;
-		height  : $slide-show-btn-size;
+		left    : 0;
+		right   : 0;
+		bottom  : 0;
 
-		transform    : translate($slide-show-btn-size / -2, $slide-show-btn-size / -2);
-		border-radius: $slide-show-btn-size-radius;
-		transition   : all 0.2s;
-	}
-	&:hover:before {
-		background-color: $slide-show-btn-color;
-	}
-	&::after {
-		content: '';
-		transition: all 0.2s;
+		background-color: $slide-show-caption-color-bg;
 
-		width : 1.4rem;
-		height: 1.4rem;
+		padding: 0.5rem 1rem;
+		@include for-tablet-up { padding: 0.85rem 1rem; }
+	}
 
-		border-top : $slide-show-btn-size-stroke solid $slide-show-btn-color-mark;
-		border-left: $slide-show-btn-size-stroke solid $slide-show-btn-color-mark;
+	.st-slide-show-caption.line {
+		@include for-tablet-landscape-up {
+			padding: 0.85rem 2rem;
 
-		transform-origin: #{1.4rem / 2} #{1.4rem / 2};
+			display        : flex;
+			flex-direction : column;
+			align-items    : flex-start;
+			justify-content: center;
+			min-height     : 50%;
+
+			background-color: transparent;
+
+			> div {
+				max-width: 100%;  // for IE
+			}
+			> div > span {
+				display  : inline;
+				max-width: 100%;  // for IE
+
+				background-color: $slide-show-caption-color-bg;
+				font-size       : $slide-show-caption-size-font-line;
+				line-height     : 1.5;
+			}
+			@if $slidw-show-caption-line-type == 'first-bold' {
+				div:first-child { @include font-bold; }
+			} @else if $slidw-show-caption-line-type == 'not-last-bold' {
+				div { @include font-bold; }
+				div:last-child { @include font-bold-cancel; }
+			}
+			div:not(:first-child) { margin-top: 1rem; }
+		}
 	}
-	&:hover::after {
-		border-top-color : $slide-show-btn-color-mark-hover;
-		border-left-color: $slide-show-btn-color-mark-hover;
+
+	.st-slide-show-caption.circle {
+		position: absolute;
+		top     : 0;
+		left    : $slide-show-btn-size;
+		right   : $slide-show-btn-size;
+		bottom  : 0;
+
+		@include layout-centering;
+		flex-direction  : column;
+		background-image: radial-gradient(circle closest-side at center center, $slide-show-caption-color-bg 50%, transparent 51%);
+
+		&,
+		& > div {
+			text-align : center;
+			line-height: 1.35;
+
+			font-size: $slide-show-caption-size-font-circle-phone;
+			@include for-tablet-up {
+				font-size: $slide-show-caption-size-font-circle;
+			}
+		}
+		> div + div { margin-top: 0.5rem; }
 	}
-}
-.st-slide-show-next {
-	right: 0;
-	&::after {
-		margin-left: -0.75rem;
-		transform  : rotate(135deg);
-	}
-}
-.st-slide-show-prev {
-	left: 0;
-	&::after {
-		margin-left: 0.75rem;
-		transform  : rotate(-45deg);
-	}
-}
+
+}  // .st-slide-show
 
 
 // -----------------------------------------------------------------------------
 
 
-.st-slide-show-rivets {
-	position : absolute;
-	left     : 50%;
-	bottom: $slide-show-rivet-overlap;
-	@if $slide-show-rivet-top-phone == true {
-		@include for-phone-only {
-			top   : $slide-show-rivet-overlap;
-			bottom: initial;
+.st-slide-show {  // for CSS Specificity
+
+	$mark-size: $slide-show-btn-size * 0.45;
+
+	.st-slide-show-prev,
+	.st-slide-show-next {
+		user-select: none;
+		cursor     : pointer;
+
+		margin  : 0;
+		position: absolute;
+		top     : 0;
+		bottom  : 0;
+		width   : $slide-show-btn-size;
+
+		@include layout-centering;
+
+		&:before {
+			content : '';
+			position: absolute;
+			top     : 50%;
+			left    : 50%;
+			width   : $slide-show-btn-size;
+			height  : $slide-show-btn-size;
+
+			transform    : translate($slide-show-btn-size / -2, $slide-show-btn-size / -2);
+			border-radius: $slide-show-btn-size-radius;
+			transition   : all 0.2s;
 		}
-	}
-	width    : 100%;
-	z-index  : 2;
-	transform: translateX(-50%);
-
-	text-align: center;
-
-	> input[type=radio] + label {
-		display: inline-block;
-		padding: $slide-show-rivet-size-padding;
-		cursor : pointer;
-
+		&:hover:before {
+			background-color: $slide-show-btn-color;
+		}
 		&::after {
 			content: '';
-			display: block;
-			width  : $slide-show-rivet-size-width;
-			height : $slide-show-rivet-size-height;
+			transition: all 0.2s;
 
-			border-radius   : $slide-show-rivet-size-radius;
-			background-color: $slide-show-rivet-color;
-			box-shadow      : $slide-show-rivet-shadow;
+			width : $mark-size;
+			height: $mark-size;
+
+			border-top : $slide-show-btn-size-stroke solid $slide-show-btn-color-mark;
+			border-left: $slide-show-btn-size-stroke solid $slide-show-btn-color-mark;
+
+			transform-origin: #{$mark-size * 0.5} #{$mark-size * 0.5};
+		}
+		&:hover::after {
+			border-top-color : $slide-show-btn-color-mark-hover;
+			border-left-color: $slide-show-btn-color-mark-hover;
 		}
 	}
-	> input[type=radio]:checked + label {
-		pointer-events: none;
-		&::after {
-			background-color: $slide-show-rivet-color-selected;
+	.st-slide-show-next {
+		right: 0;
+		&::after { transform: translateX($mark-size * -0.25) rotate(135deg); }
+	}
+	.st-slide-show-prev {
+		left: 0;
+		&::after { transform: translateX($mark-size * 0.25) rotate(-45deg); }
+	}
+
+}  // .st-slide-show
+
+
+// -----------------------------------------------------------------------------
+
+
+.st-slide-show {  // for CSS Specificity
+
+	.st-slide-show-rivets {
+		position : absolute;
+		left     : 50%;
+		bottom: $slide-show-rivet-overlap;
+		@if $slide-show-rivet-top-phone == true {
+			@include for-phone-only {
+				top   : $slide-show-rivet-overlap;
+				bottom: initial;
+			}
+		}
+		width    : 100%;
+		z-index  : 2;
+		transform: translateX(-50%);
+
+		text-align: center;
+
+		> input[type=radio] + label {
+			display: inline-block;
+			padding: $slide-show-rivet-size-padding;
+			cursor : pointer;
+
+			&::after {
+				content: '';
+				display: block;
+				width  : $slide-show-rivet-size-width;
+				height : $slide-show-rivet-size-height;
+
+				border-radius   : $slide-show-rivet-size-radius;
+				background-color: $slide-show-rivet-color;
+				box-shadow      : $slide-show-rivet-shadow;
+			}
+		}
+		> input[type=radio]:checked + label {
+			pointer-events: none;
+			&::after {
+				background-color: $slide-show-rivet-color-selected;
+			}
 		}
 	}
-}
+
+}  // .st-slide-show
